force-app/main/default/objects/song__c/song__c.object-meta.xml
<CustomObject>
    <description>Songs</description>
    <label>Song</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Song Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>