force-app/main/default/objects/song__c/fields/ChordPro_Content__c.field-meta.xml
<CustomField>
    <fullName>ChordPro_Content__c</fullName>
    <label>ChordPro Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>