force-app/main/default/objects/song__c/fields/ChordPro_Status__c.field-meta.xml
<CustomField>
    <fullName>ChordPro_Status__c</fullName>
    <label>ChordPro Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>