force-app/main/default/objects/song__c/fields/Editing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Editing_Notes__c</fullName>
    <label>Editing Notes</label>
    <type>TextArea</type>
</CustomField>