force-app/main/default/objects/song__c/fields/Learning_resource__c.field-meta.xml
<CustomField>
    <fullName>Learning_resource__c</fullName>
    <label>Learning resource</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>