force-app/main/default/objects/song__c/fields/My_Level__c.field-meta.xml
<CustomField>
    <fullName>My_Level__c</fullName>
    <label>My Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Know basics</fullName>
            </value>
            <value>
                <fullName>Need refresher</fullName>
            </value>
            <value>
                <fullName>Play Well</fullName>
            </value>
            <value>
                <fullName>Want to Learn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>