force-app/main/default/objects/song__c/fields/Song__c.field-meta.xml
<CustomField>
    <fullName>Song__c</fullName>
    <label>Song</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>