force-app/main/default/objects/song__c/fields/Web_Player__c.field-meta.xml
<CustomField>
    <fullName>Web_Player__c</fullName>
    <formula>HYPERLINK(
  &quot;https://open.spotify.com/search/&quot; &amp; 
  LOWER(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(
                    SUBSTITUTE(
                      SUBSTITUTE(
                        Artist__c &amp; &quot; &quot; &amp; Song__c,
                        &quot; &quot;, &quot;%20&quot;
                      ),
                      &quot;&amp;&quot;, &quot;%20&quot;
                    ),
                    &quot;&apos;&quot;, &quot;&quot;
                  ),
                  &quot;,&quot;, &quot;&quot;
                ),
                &quot;?&quot;, &quot;&quot;
              ),
              &quot;!&quot;, &quot;&quot;
            ),
            &quot;(&quot;, &quot;&quot;
          ),
          &quot;)&quot;, &quot;&quot;
        ),
        &quot;/&quot;, &quot;&quot;
      ),
      &quot;+&quot;, &quot;&quot;
    )
  ),
  &quot;Spotify&quot;,
  &quot;_blank&quot;
) &amp; &quot; | &quot; &amp;
HYPERLINK(
  &quot;https://www.youtube.com/results?search_query=&quot; &amp; 
  LOWER(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(
                    SUBSTITUTE(
                      SUBSTITUTE(
                        Artist__c &amp; &quot; &quot; &amp; Song__c,
                        &quot; &quot;, &quot;%20&quot;
                      ),
                      &quot;&amp;&quot;, &quot;%20&quot;
                    ),
                    &quot;&apos;&quot;, &quot;&quot;
                  ),
                  &quot;,&quot;, &quot;&quot;
                ),
                &quot;?&quot;, &quot;&quot;
              ),
              &quot;!&quot;, &quot;&quot;
            ),
            &quot;(&quot;, &quot;&quot;
          ),
          &quot;)&quot;, &quot;&quot;
        ),
        &quot;/&quot;, &quot;&quot;
      ),
      &quot;+&quot;, &quot;&quot;
    )
  ),
  &quot;Youtube&quot;,
  &quot;_blank&quot;
) &amp; &quot; | &quot; &amp;
HYPERLINK(
  &quot;https://www.google.com/search?q=&quot; &amp; 
  LOWER(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                SUBSTITUTE(
                  SUBSTITUTE(
                    SUBSTITUTE(
                      SUBSTITUTE(
                        Artist__c &amp; &quot; &quot; &amp; Song__c,
                        &quot; &quot;, &quot;%20&quot;
                      ),
                      &quot;&amp;&quot;, &quot;%20&quot;
                    ),
                    &quot;&apos;&quot;, &quot;&quot;
                  ),
                  &quot;,&quot;, &quot;&quot;
                ),
                &quot;?&quot;, &quot;&quot;
              ),
              &quot;!&quot;, &quot;&quot;
            ),
            &quot;(&quot;, &quot;&quot;
          ),
          &quot;)&quot;, &quot;&quot;
        ),
        &quot;/&quot;, &quot;&quot;
      ),
      &quot;+&quot;, &quot;&quot;
    )
  ),
  &quot;Google&quot;,
  &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Player</label>
    <type>Text</type>
</CustomField>