force-app/main/default/objects/song__c/listViews/All_Songs.listView-meta.xml
<ListView>
    <fullName>All_Songs</fullName>
    <columns>NAME</columns>
    <columns>Song__c</columns>
    <columns>Artist__c</columns>
    <columns>My_Level__c</columns>
    <columns>ChordPro_Status__c</columns>
    <columns>Editing_Notes__c</columns>
    <columns>Difficulty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Songs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>