force-app/main/default/objects/song__c/listViews/Canciones_en_Espanol.listView-meta.xml
<ListView>
    <fullName>Canciones_en_Espanol</fullName>
    <columns>Artist__c</columns>
    <columns>Song__c</columns>
    <columns>Priority__c</columns>
    <columns>ChordPro_Status__c</columns>
    <columns>NAME</columns>
    <columns>My_Level__c</columns>
    <columns>Editing_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>Spanish</value>
    </filters>
    <label>Canciones en Español</label>
</ListView>