force-app/main/default/objects/song__c/listViews/Public_Songs.listView-meta.xml
<ListView>
    <fullName>Public_Songs</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Song__c</columns>
    <columns>Language__c</columns>
    <columns>Difficulty__c</columns>
    <filterScope>Everything</filterScope>
    <label>Public Songs</label>
</ListView>